# talking-head

./: .gitignore  .npmrc  CLAUDE.md  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.claude/skills/add-new-shape/: SKILL.md
.github/workflows/: ci.yml
docs/: BUILDLOG.md
docs/adr/: ADR-001-decoupled-layers.md  ADR-002-tts-engine.md  ADR-003-head-asset-oculus-visemes.md  ADR-004-server-and-stt.md
server/: README.md  pyproject.toml
server/app/: audio.py  main.py
server/app/backends/: __init__.py  base.py  mlx.py  mlx_whisper.py  stub.py  stub_stt.py
server/scripts/: bench_rtf.py  bench_stt_rtf.py
server/tests/: test_mlx_backend.py  test_mlx_whisper_backend.py  test_synthesize.py  test_transcribe.py
src/: App.css  App.tsx
src/core/: AudioBus.ts  MorphSource.ts  color.test.ts  color.ts  formations.ts  grid.test.ts  grid.ts  mesh-sampling.test.ts  mesh-sampling.ts  mesh-topology.test.ts  mesh-topology.ts  useMorphEngine.ts
src/head/: HeadGLB.tsx  headMorphController.test.ts  headMorphController.ts  visemeMap.ts  wawaLipsync.test.ts  wawaLipsync.ts
src/scene/: Scene.tsx
src/shapes/: ShapeRegistry.test.ts  ShapeRegistry.ts  cube.ts  index.ts  pyramid.ts  sphere.ts  surfaces.test.ts  surfaces.ts
src/shapes/head/: buildHeadGeometry.test.ts  buildHeadGeometry.ts  head.ts
src/sources/: CompositeMorphSource.test.ts  CompositeMorphSource.ts  LipSyncSource.test.ts  LipSyncSource.ts  ShapeMorphSource.test.ts  ShapeMorphSource.ts
src/store/: appearanceStore.ts  debugStore.ts  shapeStore.ts
src/tts/: BrowserTTSProvider.test.ts  BrowserTTSProvider.ts  TTSProvider.ts  kokoroVoices.ts
src/ui/: AppearancePanel.css  AppearancePanel.tsx  FillToggle.tsx  OcclusionToggle.css  OcclusionToggle.tsx  ShapeSwitcher.css  TTSPanel.css  TTSPanel.tsx  VisemePanel.css  VisemePanel.tsx
web/: .env.example  index.html  package.json
web/assets/: head.glb
web/src/: App.tsx  index.css  vite-env.d.ts
web/src/core/: MorphEngine.ts  grid.test.ts  grid.ts  mesh-sampling.test.ts  mesh-sampling.ts  useMorphEngine.ts
web/src/scene/: Scene.tsx
(+34 files in other folders)
